--- a/hr_staffProfile.html
+++ b/hr_staffProfile.html
@@ -319,7 +319,7 @@
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
-                                                                        <span class="text-secondary">ID</span><br>
+                                                                        <span class="text-secondary">Staff ID</span><br>
                                                                         <span class="f-w-600">D19</span>
                                                                     </div>
                                                                 </div>
@@ -327,6 +327,12 @@
                                                                     <div>
                                                                         <span class="text-secondary">Designation</span><br>
                                                                         <span class="f-w-600">Electronics Trainer</span>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-sm-3 mb-3">
+                                                                    <div>
+                                                                        <span class="text-secondary">Role</span><br>
+                                                                        <span class="f-w-600">HO</span>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
@@ -350,7 +356,13 @@
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
                                                                         <span class="text-secondary">Center</span><br>
-                                                                        <span class="f-w-600">Mehsana</span>
+                                                                        <span class="f-w-600">Mehsana1</span>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-sm-3 mb-3">
+                                                                    <div>
+                                                                        <span class="text-secondary">Role</span><br>
+                                                                        <span class="f-w-600">-</span>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -385,7 +397,7 @@
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
-                                                                        <span class="text-secondary">ID</span><br>
+                                                                        <span class="text-secondary">Staff ID</span><br>
                                                                         <span class="f-w-600">D11</span>
                                                                     </div>
                                                                 </div>
@@ -398,11 +410,25 @@
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
-                                                                        <span class="text-secondary">Staff
-                                                                            Type</span><br>
-                                                                        <span class="f-w-600">Regular</span>
+                                                                        <span class="text-secondary">Role</span>
+                                                                        </span><br>
+                                                                        <span class="f-w-600">HO</span>
                                                                     </div>
                                                                 </div>
+                                                                <div class="col-sm-3 mb-3">
+                                                                    <div>
+                                                                        <span class="text-secondary">Staff
+                                                                            Type</span><br>
+                                                                            <span class="f-w-600">Regular</span>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="col-sm-3 mb-3">
+                                                                        <div>
+                                                                            <span class="text-secondary">Email</span>
+                                                                            </span><br>
+                                                                            <span class="f-w-600">abc@gmail.com</span>
+                                                                        </div>
+                                                                    </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
                                                                         <span class="text-secondary">contact
@@ -412,16 +438,16 @@
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
-                                                                        <span class="text-secondary">Reporting
-                                                                            Manager</span><br>
-                                                                        <span class="f-w-600">-</span>
+                                                                        <span class="text-secondary">Center
+                                                                            </span><br>
+                                                                        <span class="f-w-600">Mehsana</span>
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
-                                                                        <span class="text-secondary">Center
-                                                                            </span><br>
-                                                                        <span class="f-w-600">Mehsana</span>
+                                                                        <span class="text-secondary">Reporting
+                                                                            Manager</span><br>
+                                                                        <span class="f-w-600">-</span>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -519,12 +545,6 @@
                                                             <div class="row custom-section">
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
-                                                                        <span class="text-secondary">Email</span><br>
-                                                                        <span class="f-w-600">ankit@gmail.com</span>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="col-sm-3 mb-3">
-                                                                    <div>
                                                                         <span class="text-secondary">Gender</span><br>
                                                                         <span class="f-w-600">Male</span>
                                                                     </div>
@@ -559,6 +579,13 @@
                                                                 </div>
                                                                 <div class="col-sm-3 mb-3">
                                                                     <div>
+                                                                        <span class="text-secondary">Physically
+                                                                            Challenged</span><br>
+                                                                        <span class="f-w-600">No</span>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-sm-3 mb-3">
+                                                                    <div>
                                                                         <span class="text-secondary">Father's
                                                                             Name</span><br>
                                                                         <span class="f-w-600">Ram Sharma</span>
@@ -576,13 +603,6 @@
                                                                         <span class="text-secondary">Spouse's
                                                                             Name</span><br>
                                                                         <span class="f-w-600">-</span>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="col-sm-3 mb-3">
-                                                                    <div>
-                                                                        <span class="text-secondary">Physically
-                                                                            Challenged</span><br>
-                                                                        <span class="f-w-600">No</span>
                                                                     </div>
                                                                 </div>
                                                             </div>
