--- a/hr_create_holiday.html
+++ b/hr_create_holiday.html
@@ -299,33 +299,6 @@
                 <div class="container-fluid">
                     <div class="email-wrap bookmark-wrap">
                         <div class="row">
-                            <!-- sidebar-->
-                            <div class="col-xl-2 box-col-3 xl-10">
-                                <div class="md-sidebar-aside">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <div class="email-app-sidebar left-bookmark">
-                                                <ul class="nav main-menu" role="tablist">
-                                                    <li><a id="pills-created-tab" href="hr_staffProfile.html" role="tab"
-                                                            aria-controls="pills-created" aria-selected="true"><span
-                                                                class="title">Profile</span></a></li>
-                                                    <li><a class="show" id="pills-delayed-tab" href="hr_staffSalary.html" role="tab"
-                                                            aria-controls="pills-delayed" aria-selected="false"><span
-                                                                class="title">Salary Overview</span></a></li>
-                                                    <li><a class="show" id="pills-todaytask-tab" href="hr_salary_structure.html" role="tab"
-                                                            aria-controls="pills-todaytask" aria-selected="false"><span
-                                                                class="title">Salary Structure</span></a></li>
-                                                    <li>
-                                                    <li>
-                                                        <hr>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-10 col-md-12 box-col-9 xl-90">
                 <div class="container-fluid">
                     <div class="page-header dash-breadcrumb py-3">
                         <div class="row">
@@ -357,9 +330,9 @@
                                         <input type="month" class="form-control" id="holidayEnd" placeholder="December 2024">
                                     </div>
                                 </div>
-                                <div class="col-lg-4 d-flex align-items-center justify-content-end"> <!-- Adjusted classes here -->
+                                <!-- <div class="col-lg-4 d-flex align-items-center justify-content-end"> 
                                     <button class="btn btn-pill btn-primary">Add</button>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -373,37 +346,63 @@
                 </div> -->
 
                 <div class="container-fluid">
-                    <div class="col-6">
-                        <h3 class="f-w-600" style="font-size: 24px; font-weight: bold;">Holiday List</h3>
+                    <div class="row">
+                        <div class="col-6">                            
+                            <p class="fs-6 text-secondary">Holiday List</p>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end">
+                            <button class="btn btn-pill btn-primary" >Add Holiday</button>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="display" id="basic-1">
-                                    <thead>
-                                        <tr>
-                                            <th>Holiday Name</th>
-                                            <th>Holiday Date</th>
-                                            <th>To Date</th>
-                                            <th>Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>New Year</td>
-                                            <td>07/11/2024</td>
-                                            <td>15/11/2024</td>
-                                            <td class="d-flex justify-content-center icon">
-                                                <i class="icondt fa fa-pencil" title="Edit Holiday" onclick=""></i>
-                                                <i class="icondt fa fa-trash text-danger" data-bs-toggle="modal"
-                                                    data-original-title="test" data-bs-target="#modal" id="#modal"
-                                                    title="delete"></i>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                            <div class="row mt-2">
+                                <div class="col-3">
+                                    <div class="form-group">
+                                        <label for="checkbox-primary-0">Holiday Name</label>
+                                        <input type="text" class="form-control" id="contact"
+                                            name="contact" value="Diwali"
+                                            placeholder="Enter Holiday" />
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <div class="form-group">
+                                        <label for="checkbox-primary-0">Holiday Date</label>
+                                        <input type="date" class="form-control" id="contact"
+                                            name="contact" value=""
+                                            placeholder="Enter Emergency Contact" />
+                                    </div>
+                                </div>
+                                <div class="col-3 mt-4 pt-1">
+                                    <i data-feather="trash-2"></i>
+                                </div>
                         </div>
+                        <div class="row mt-2">
+                            <div class="col-3">
+                                <div class="form-group">
+                                    <label for="checkbox-primary-0">Holiday Name</label>
+                                    <input type="text" class="form-control" id="contact"
+                                        name="contact" value="Diwali"
+                                        placeholder="Enter Holiday" />
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="form-group">
+                                    <label for="checkbox-primary-0">Holiday Date</label>
+                                    <input type="date" class="form-control" id="contact"
+                                        name="contact" value=""
+                                        placeholder="Enter Emergency Contact" />
+                                </div>
+                            </div>
+                            <div class="col-3 mt-4 pt-1">
+                                <i data-feather="trash-2"></i>
+                            </div>
+                    </div>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-12 d-flex justify-content-end">
+                        <button class="btn btn-success btn-pill">Save & Apply</button>
                     </div>
                 </div>
             </div>
@@ -465,7 +464,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
 </div>
@@ -473,9 +471,8 @@
 
             <!-- <div class="sticky-footer">
                 <div class="row">
-                    <div class="col-2 fs-6">20 Holidays Added</div>
-                    <div class="col-10 d-flex justify-content-end">
-                        <button class="btn btn-primary">Save & Apply</button>
+                    <div class="col-12 d-flex justify-content-end">
+                        <button class="btn btn-success btn-pill">Save & Apply</button>
                     </div>
                 </div>
             </div> -->
