--- a/hr_dashboard.html
+++ b/hr_dashboard.html
@@ -370,9 +370,9 @@
                       </div>
                     </div> -->
                         <div class="d-flex justify-content-between mb-2">
-                          <button class="btn btn-primary">Expand All</button>
+                          <button class="btn btn-primary btn-pill">Expand All</button>
                           <div>
-                            <button class="btn btn-secondary" data-toggle="dropdown">Download</button>
+                            <button class="btn btn-secondary btn-pill" data-toggle="dropdown">Download</button>
                             <div class="dropdown-menu">
                               <a class="dropdown-item" href="#">Option 1</a>
                               <a class="dropdown-item" href="#">Option 2</a>
