--- a/hr_editStaff.html
+++ b/hr_editStaff.html
@@ -375,6 +375,10 @@
                                                                                 <h5 class="f-w-600">Profile Information
                                                                                 </h5>
                                                                             </div>
+                                                                            <div class="col-6 d-flex justify-content-end gap-2">
+                                                                                <button class="btn btn-pill btn-primary">Discard</button>
+                                                                                <button class="btn btn-pill btn-primary">Edit</button>
+                                                                                </div>
                                                                         </div>
                                                                     </div>
                                                                     <hr />
@@ -417,7 +421,22 @@
                                                                                 <option>Manager</option>
                                                                             </select>
                                                                         </div>
-
+                                                                        <div class="col-3">
+                                                                            <div class="form-group">
+                                                                                <label for="role">Role</label>
+                                                                                <select class="form-select" id="role"
+                                                                                    name="role">
+                                                                                    <option disabled selected>Select
+                                                                                        Role</option>
+                                                                                    <option value="Regular">HO
+                                                                                    </option>
+                                                                                    <option value="Contract">CEO
+                                                                                    </option>
+                                                                                    <option value="Work Basis">Accountant
+                                                                                        </option>
+                                                                                </select>
+                                                                            </div>
+                                                                        </div>
                                                                         <div class="col-3">
                                                                             <div class="form-group">
                                                                                 <label for="role">Staff Type</label>
@@ -432,6 +451,14 @@
                                                                                     <option value="Work Basis">Work
                                                                                         Basis</option>
                                                                                 </select>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="col-3">
+                                                                            <div class="form-group">
+                                                                                <label for="email">Email</label>
+                                                                                <input type="text" class="form-control"
+                                                                                    id="email" name="email"
+                                                                                    placeholder="Enter Email" />
                                                                             </div>
                                                                         </div>
                                                                         <div class="col-3">
@@ -477,7 +504,15 @@
                                                                                 </select>
                                                                             </div>
                                                                         </div>
-                                                                        <div class="col-12 d-flex justify-content-end">
+                                                                        <div class="col-3">
+                                                                            <div class="form-group">
+                                                                                <label for="email">Staff ID</label>
+                                                                                <input type="text" class="form-control"
+                                                                                    id="email" name="email"
+                                                                                    placeholder="Enter Staff ID" />
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="col-12 d-flex justify-content-end">
                                                                             <!-- No next/back buttons here -->
                                                                         </div>
                                                                     </div>
@@ -495,6 +530,10 @@
                                                                                 <h5 class="f-w-600">General Information
                                                                                 </h5>
                                                                             </div>
+                                                                            <div class="col-6 d-flex justify-content-end gap-2">
+                                                                                <button class="btn btn-pill btn-primary">Discard</button>
+                                                                                <button class="btn btn-pill btn-primary">Edit</button>
+                                                                                </div>
                                                                         </div>
                                                                     </div>
                                                                     <hr />
@@ -507,17 +546,17 @@
                                                                                 name="salary_cycle" value="1">
                                                                         </div>
                                                                         <div class="col-sm-3 mb-3">
-                                                                            <label class="form-label">Week off</label>
-                                                                            <select class="form-select" id="week_off" name="week_off" multiple>
-                                                                                <option value="Sunday">Sunday</option>
-                                                                                <option value="Saturday">Saturday</option>
-                                                                                <option value="Friday">Friday</option>
-                                                                                <option value="Thursday">Thursday</option>
-                                                                                <option value="Wednesday">Wednesday</option>
-                                                                                <option value="Tuesday">Tuesday</option>
-                                                                                <option value="Monday">Monday</option>
-                                                                            </select>
-                                                                    </div>
+                                                                                <label class="form-label">Week off</label>
+                                                                                <select class="form-select" id="week_off" name="week_off" multiple>
+                                                                                    <option value="Sunday">Sunday</option>
+                                                                                    <option value="Saturday">Saturday</option>
+                                                                                    <option value="Friday">Friday</option>
+                                                                                    <option value="Thursday">Thursday</option>
+                                                                                    <option value="Wednesday">Wednesday</option>
+                                                                                    <option value="Tuesday">Tuesday</option>
+                                                                                    <option value="Monday">Monday</option>
+                                                                                </select>
+                                                                        </div>
                                                                         <div class="col-sm-3 mb-3">
                                                                             <label for="week_off"
                                                                                 class="form-label">Holiday
@@ -609,18 +648,15 @@
                                                                                 <h5 class="f-w-600">Personal Information
                                                                                 </h5>
                                                                             </div>
+                                                                            <div class="col-6 d-flex justify-content-end gap-2">
+                                                                                <button class="btn btn-pill btn-primary">Discard</button>
+                                                                                <button class="btn btn-pill btn-primary">Edit</button>
+                                                                                </div>
                                                                         </div>
                                                                     </div>
                                                                     <hr />
                                                                     <div class="row">
-                                                                        <div class="col-3">
-                                                                            <div class="form-group">
-                                                                                <label for="email">Email</label>
-                                                                                <input type="text" class="form-control"
-                                                                                    id="email" name="email"
-                                                                                    placeholder="Enter Email" />
-                                                                            </div>
-                                                                        </div>
+                                                                        
                                                                         <div class="col-3">
                                                                             <label>Gender</label>
                                                                             <div class="d-flex">
@@ -633,6 +669,15 @@
                                                                                         Male
                                                                                     </label>
                                                                                 </div>
+                                                                                    <div class="form-check me-3">
+                                                                                    <input class="form-check-input"
+                                                                                        type="radio" name="gender"
+                                                                                        id="male" value="male" />
+                                                                                     <label class="form-check-label"
+                                                                                        for="other">
+                                                                                        Other
+                                                                                    </label>
+                                                                                    </div>
                                                                                 <div class="form-check">
                                                                                     <input class="form-check-input"
                                                                                         type="radio" name="gender"
@@ -865,6 +910,10 @@
                                                                                 <h5 class="f-w-600">Bank Information
                                                                                 </h5>
                                                                             </div>
+                                                                            <div class="col-6 d-flex justify-content-end gap-2">
+                                                                                <button class="btn btn-pill btn-primary">Discard</button>
+                                                                                <button class="btn btn-pill btn-primary">Edit</button>
+                                                                                </div>
                                                                         </div>
                                                                     </div>
                                                                     <hr />
@@ -907,12 +956,6 @@
                                                                                     placeholder="Enter Name of Account Holder" />
                                                                             </div>
                                                                         </div>
-                                                                        <div class="col-12 d-flex justify-content-end">
-                                                                            <!-- No next/back buttons here -->
-                                                                            <button type="button"
-                                                                                class="btn btn-pill btn-primary"
-                                                                                onclick="submitForm()">Submit</button>
-                                                                        </div>
                                                                     </div>
                                                                 </div>
                                                             </form>
@@ -928,6 +971,10 @@
                                                                             <div class="col-6">
                                                                                 <h5 class="f-w-600">Employment Information
                                                                                 </h5>
+                                                                            </div>
+                                                                            <div class="col-6 d-flex justify-content-end gap-2">
+                                                                            <button class="btn btn-pill btn-primary">Discard</button>
+                                                                            <button class="btn btn-pill btn-primary">Edit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -967,12 +1014,6 @@
                                                                                     name="account_holder_name"
                                                                                     placeholder="Enter Name of Aadhar Holder" />
                                                                             </div>
-                                                                        </div>
-                                                                        <div class="col-12 d-flex justify-content-end">
-                                                                            <!-- No next/back buttons here -->
-                                                                            <button type="button"
-                                                                                class="btn btn-pill btn-primary"
-                                                                                onclick="submitForm()">Submit</button>
                                                                         </div>
                                                                     </div>
                                                                 </div>
