--- a/hr_leave.html
+++ b/hr_leave.html
@@ -419,13 +419,11 @@
                                     <input type="text" class="form-control" placeholder="Search Staff">
                                 </div> -->
                                 <div class="col-4 text-right">
-                                    <div class="input-group">
-                                      <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="fas fa-search"></i></span>
+                                      <div class="form-group">
+                                        <!-- <span class="input-group-text"><i class="fas fa-search"></i></span> -->
                                       </div>
                                       <input type="text" class="form-control" placeholder="Search Staff">
                                     </div>
-                                  </div>
                             </div>
                             <!-- <div class="row text-left">
                                 <div class="col-2 text-left">
